STYLE: Adjust hero image to 60% width to avoid stretch

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,9 +75,9 @@ header {
 
 #hero-image {
     height: 675px;
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 /* About section */
